v0.6.0, <RELEASE DATE HERE>:

* on_pre_build() and on_post_build() now always use the path of the input file as the CWD.
	* This is to mirror functionality of other parts of Builder.
* Fixed top-level files and some subfolders inside VisualStudioProject::code_folders not getting added to the Visual Studio project.

----------------------------------------------------------------

v0.5.8, 09/02/2025:

* Fixed the way Builder checks for duplicate BuildConfigs when calling add_build_config().
	* Builder now hashes the BuildConfig and checks the hashes when adding a new BuildConfig in order to determine if it's a duplicate or not.
	* You can find this code at the bottom of builder.h.  It's not meant to be used by users (as the comment shows).
* Refactored rebuild skipping.  It's more robust now.

----------------------------------------------------------------

v0.5.7, 08/02/2025:

* Throw an error if multiple BuildConfigs have an empty name.
* Throw an error if specifying a config whilst also trying to generate a Visual Studio solution.
	* Having Builder actually do both of those things feels hacky so I'm deliberately not allowing it to do both right now.
* Input file path is no longer allocated via temp storage, which now gets reset.
* Visual Studio files are now written via one single call to file_write_entire(), as opposed to lots of file_write*() calls.
	* More stable this way and faster too!

----------------------------------------------------------------

v0.5.6, 02/02/2025:

* Fixed temp storage overflows which caused Builder to crash.
* Fixed builds incorrectly being skipped if an old version of the binary with the same name existed.

----------------------------------------------------------------

v0.5.5, 21/01/2025:

* Builder now serializes it's version number into all .build_info files.
	* This is to detect whether or not we need to rebuild between new versions of builder.