@@ -6,7 +6,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LocalDebuggerCommand>$(SolutionDir)builder.exe</LocalDebuggerCommand>
     <DebuggerFlavor>WindowsLocalDebugger</DebuggerFlavor>
-    <LocalDebuggerCommandArguments>build.cpp --config=hello-triangle-debug</LocalDebuggerCommandArguments>
+    <LocalDebuggerCommandArguments>build.cpp</LocalDebuggerCommandArguments>
     <LocalDebuggerWorkingDirectory>C:\dev\TEF</LocalDebuggerWorkingDirectory>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
