@@ -682,13 +682,17 @@ static void NukeFolder( const char* folder, const bool8 verbose ) {
 	} while ( file_find_next( &file, &fileInfo ) );
 }
 
+const char* GetSlashInPath( const char* path ) {
+	const char* slash = NULL;
+
+	if ( !slash ) slash = strchr( path, '/' );
+	if ( !slash ) slash = strchr( path, '\\' );
+
+	return slash;
+}
+
 bool8 PathHasSlash( const char* path ) {
-	bool8 hasSlash = false;
-
-	hasSlash |= strchr( path, '/' ) != NULL;
-	hasSlash |= strchr( path, '\\' ) != NULL;
-
-	return hasSlash;
+	return GetSlashInPath( path ) != NULL;
 }
 
 static const char* TryFindFile_r( const char* filename, const char* folder ) {
@@ -1458,7 +1462,7 @@ int main( int argc, char** argv ) {
 	core_init( MEM_KILOBYTES( 1 ), MEM_MEGABYTES( 128 ) );
 	defer( core_shutdown() );
 
-	printf( "Builder v%d.%d.%d\n\n", BUILDER_VERSION_MAJOR, BUILDER_VERSION_MINOR, BUILDER_VERSION_PATCH );
+	printf( "Builder v%d.%d.%d RC2\n\n", BUILDER_VERSION_MAJOR, BUILDER_VERSION_MINOR, BUILDER_VERSION_PATCH );
 
 	buildContext_t context = {};
 	context.flags |= BUILD_CONTEXT_FLAG_SHOW_COMPILER_ARGS | BUILD_CONTEXT_FLAG_SHOW_STDOUT;
